# workshop

./: .gitignore  model.pkl  pyproject.toml  requirements.txt  workshop.ipynb
.ipynb_checkpoints/: workshop-checkpoint.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
