[tool.poetry]
name = "workshop-1"
version = "0.1.0"
description = ""
authors = ["Evgenii <evgen.ak24@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
